added example 9.7 to linear iterative systems

--- a/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
+++ b/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
@@ -70,7 +70,11 @@
     "If we _roll out_ the dynamics [](#sc_lin_iter), we easily compute:\n",
     "\n",
     "$$\n",
-    "x(0) = a, \\quad x(1) = \\lambda a, \\quad x(2) = \\lambda^2 a, \\quad \\ldots, \\quad x(k) = \\lambda^k a \\quad \\text{for any positive integer } k.\n",
+    "x(0) &= a, \\\\\n",
+    "x(1) &= \\lambda a, \\\\\n",
+    "x(2) &= \\lambda^2 a, \\\\\n",
+    "&\\ldots \\\\\n",
+    "x(k) &= \\lambda^k a \\quad \\text{for any positive integer } k.\n",
     "$$\n",
     "\n",
     "We therefore immediately conclude that there are three possibilities for $x(0) = a \\neq 0$:\n",
@@ -103,7 +107,11 @@
     "Rolling out the dynamics [](#lin_iter_eqn), we again see a clear solution to [](#lin_iter_eqn):\n",
     "\n",
     "$$\n",
-    "\\vv x(0) = \\vv a, \\quad \\vv x(1) = T \\vv a, \\quad \\vv x(2) = T^2 \\vv a, \\quad \\ldots, \\quad \\vv x(k) = T^k \\vv a \\quad \\text{for all } k \\in \\mathbb{N}.\n",
+    "\\vv x(0) &= \\vv a, \\\\\n",
+    "\\vv x(1) &= T \\vv a, \\\\\n",
+    "\\vv x(2) &= T^2 \\vv a, \\\\\n",
+    "&\\ldots \\\\\n",
+    "\\vv x(k) &= T^k \\vv a \\quad \\text{for all } k \\in \\mathbb{N}.\n",
     "$$\n",
     "\n",
     "However, unlike the scalar setting [](#sc_lin_iter), the qualitative behavior of $\\vv x(k) = T^k \\vv a$ as $k \\to \\infty$ is much less obvious. Since the scalar solution $x(k) = \\lambda^k a$ is defined in terms of powers of $\\lambda$, let's try a similar guess for the vector-valued \n",
@@ -118,9 +126,9 @@
     "Thus, for each eigenvalue/vector pair $(\\lambda_i, \\vv v_i)$ of $T$, we can construct a solution $\\vv x_i(k) = \\lambda_i^k \\vv v_i$ to [](#lin_iter_eqn). By linear superposition, we can use \n",
     "this observation to characterize all solutions for complete matrices.\n",
     "\n",
-    ":::{prf:theorem}\n",
+    ":::{prf:theorem} The solution to a linear iterative system with complete coefficient matrix\n",
     ":label: pow_mat_thm\n",
-    "If the coefficient matrix $T$ is complete, then the general solution to the linear iterative system $\\vv x(k+1) = T\\vv x(k)$ is given by\n",
+    "If the coefficient matrix $T$ is complete (i.e., diagonalizable), then the general solution to the linear iterative system $\\vv x(k+1) = T\\vv x(k)$ is given by\n",
     "\n",
     "$$\n",
     "\\vv x(k) = c_1 \\lambda_1^k \\vv v_1 + c_2 \\lambda_2^k \\vv v_2 + \\cdots + c_n \\lambda_n^k \\vv v_n,\n",
@@ -154,7 +162,8 @@
     "\\vv x_1(k) = \\lambda_1^k \\vv v_1 = (.8)^k \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\quad \\text{and} \\quad \\vv x_2(k) = \\lambda_2^k \\vv v_2 = (.4)^k \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}.\n",
     "$$\n",
     "\n",
-    "Thus, a general solution is given by $\\vv x(k) = c_1 \\vv x_1(k) + c_2 \\vv x_2(k) = c_1(.8)^k \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} + c_2(.4)^k \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}$\n",
+    "Thus, a general solution is given by \n",
+    "$$\\vv x(k) = c_1 \\vv x_1(k) + c_2 \\vv x_2(k) = c_1(.8)^k \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} + c_2(.4)^k \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}$$\n",
     "\n",
     "To determine $c_1$ and $c_2$, we solve \n",
     "$$\n",
@@ -167,7 +176,7 @@
     "\\frac{a_2 - a_1}{2}(.4)^k \\bm -1 \\\\ 1 \\em.\n",
     "$$\n",
     "\n",
-    "We conclude that $\\vv x(k) \\to 0$ as $k \\to \\infty$, and that the slowest decaying direction is $\\vv v_1 = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$, which decays at rate $.8$ (by $80\\%$) per time step.\n",
+    "We conclude that $\\vv x(k) \\to 0$ as $k \\to \\infty$, and that the slowest decaying direction is $\\vv v_1 = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$, which decays at rate $0.8$ (gets 20% smaller) each time step. We can visualize this in the plot below; we sampled initial conditions along the unit circle (shown in orange) and plotted the iterates after 0, 1, 2, 3, 4 (corresponding to orange, green, blue, purple, red respectively) time steps.\n",
     "\n",
     ":::{figure}../figures/08-stable_iter_sys.jpg\n",
     ":label:stable_iter_sys\n",
@@ -176,14 +185,56 @@
     ":align: center\n",
     ":::\n",
     "\n",
-    "Sampled initial conditions along unit circle are shown in orange, then [plot](#stable_iter_sys) iterates with the below colour code. \n",
-    "$$\n",
-    "\\text{green} \\quad  &\\text{blue} \\quad & \\text{purple} \\quad & \\text{red} \\\\\n",
-    "k=1  \\quad  & k=2  \\quad & k=3  \\quad  & k=4\n",
-    "$$\n",
     "::::\n",
     "\n",
-    "**TO DO**: Please include Example 9.7 and show how to obtain final solutions."
+    ":::{prf:example} A $3\\times 3$ linear iterative system with complete coefficient matrix (ALA Example 9.7)\n",
+    ":label: linear-iterative-ex1\n",
+    "\n",
+    "Let $T = \\bm -3&1&6\\\\1&-1&-2\\\\-1&-1&0\\em$ be the coefficient matrix for a three-dimensional iterative system $\\vv{u}(k + 1) = T\\vv u(k)$. Its eigenvalues and corresponding eigenvectors are\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{ccc}\n",
+    "\\lambda_1 = -2, & \\lambda_2 = -1 + i, & \\lambda_3 = -1 -i,\\\\\n",
+    "\\vv{v_1} = \\bm 4\\\\-2\\\\1\\em, & \\vv{v_2} = \\bm 2 - i \\\\ -1 \\\\ 1 \\em, & \\vv{v_3} = \\bm 2 + i \\\\ -1 \\\\ 1\\em.\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "These eigenvectors are linearly independent and hence $T$ is complete. Applying the above result on linear iterative systems with complete coefficient matrices, the general complex solution to this is \n",
+    "\n",
+    "$$\n",
+    "\\vv{u}(k) = v_1(-2)^k \\bm 4\\\\-2\\\\1\\em + b_2 (-1 + i)^k\\bm 2-i\\\\-1\\\\1\\em + b_3 (-1 - i)^k\\bm 2 + i\\\\-1\\\\1\\em\n",
+    "$$\n",
+    "\n",
+    "where $b_1, b_2, b_3$ are complex scalars corresponding to the choice of initial condition $\\vv u(0)$.\n",
+    "\n",
+    "If we are only interested in real solutions (e.g., if the initial conditions are real), we can break up any complex solution into its real and imaginary parts, each of which constitutes a real solution.  We begin by writing $\\lambda_2 = -1 + i = \\sqrt 2 (\\cos{\\frac 3 4 \\pi} + i\\sin{\\frac 3 4 \\pi}) = \\sqrt 2 e^{3\\pi i/4}$ in polar form, and hence (applying [Euler's formula](#euler-formula-thm)),\n",
+    "\n",
+    "$$\n",
+    "(-1 + i)^k =  (\\sqrt 2) ^ke^{\\frac 3 4 k\\pi i} = (\\sqrt 2) ^k (\\cos {\\frac 3 4 k \\pi} + i \\sin {\\frac 3 4 k \\pi}).\n",
+    "$$\n",
+    "\n",
+    "Therefore, the complex solution corresponding to $\\lambda_2 = -1 + i$ can be rewritten as\n",
+    "\n",
+    "$$\n",
+    "(-1 + i)^k\\bm 2 - i\\\\ -1\\\\1\\em = (\\sqrt 2)^k \\bm 2\\cos {\\frac 3 4 k \\pi} + \\sin {\\frac 3 4 k \\pi} \\\\ -\\cos {\\frac 3 4 k \\pi} \\\\ \\cos{\\frac 3 4 k \\pi}\\em + i (\\sqrt 2)^k \\bm 2\\sin{\\frac 3 4 k \\pi} - \\cos{\\frac 3 4 k \\pi} \\\\ -\\sin {\\frac 3 4 k \\pi} \\\\ \\sin{\\frac 3 4 k\\pi} \\em\n",
+    "$$\n",
+    "\n",
+    "can be rewritten as a (complex) combination of two linearly independent real solutions! We do the same for the complex conjugate eigenvalue $\\lambda_3 = -1 -i$, which leads to the complex conjugate solution and the same two real solutions:\n",
+    "\n",
+    "$$\n",
+    "(-1 - i)^k\\bm 2 + i\\\\ -1\\\\1\\em = (\\sqrt 2)^k \\bm 2\\cos{\\frac 3 4 k \\pi} + \\sin{\\frac 3 4 k \\pi}\\\\-\\cos{\\frac 3 4 k \\pi} \\\\ \\cos{\\frac 3 4 k \\pi} \\em - i (\\sqrt 2)^k \\bm 2\\sin{\\frac 3 4 k \\pi} - \\cos{\\frac 3 4 k \\pi} \\\\ -\\sin {\\frac 3 4 k \\pi} \\\\ \\sin{\\frac 3 4 k\\pi} \\em\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Note that this is incredibly similar to our approach for rewriting complex solutions to linear ODEs! We take the complex base solutions, and use Euler's identity to rewrite them as (complex) linear combinations of real solutions! Thus, the general real solution $\\vv{u}(k)$ to the system can be written as a linear combination of the three independent real solutions:\n",
+    "\n",
+    "$$\n",
+    "c_1 (-2)^k \\bm 4\\\\-2\\\\1\\em + c_2 (\\sqrt 2)^k \\bm 2\\cos {\\frac 3 4 k \\pi} + \\sin {\\frac 3 4 k \\pi} \\\\ -\\cos {\\frac 3 4 k \\pi} \\\\ \\cos{\\frac 3 4 k \\pi}\\em + c_3 (\\sqrt 2)^k \\bm 2\\sin{\\frac 3 4 k \\pi} - \\cos{\\frac 3 4 k \\pi} \\\\ -\\sin {\\frac 3 4 k \\pi} \\\\ \\sin{\\frac 3 4 k\\pi} \\em\n",
+    "$$\n",
+    "\n",
+    "where $c_1, c_2, c_3$ are arbitrary real scalars (assuming that the initial conditions are real), uniquely prescribed by the initial conditions.\n",
+    "\n",
+    ":::\n"
    ]
   },
   {
@@ -195,8 +246,8 @@
     "An alternative and equally efficient approach to solving [](#lin_iter_eqn) in the case of complex matrices is based on the diagonalization of T. We start with the following observation (which we also saw when computing the matrix exponential). Let $V = \\bm \\vv v_1 & \\cdots & \\vv v_n\\em$ be an eigenbasis for $T$, and $\\Lambda = \\text{diag}(\\lambda_1, \\ldots, \\lambda_n)$ the diagonal matrix of the eigenvalues of $T$. Then:\n",
     "\n",
     "\\begin{align*}\n",
-    "T &= V \\Lambda V^{-1} \\\n",
-    "T^2 &= V \\Lambda V^{-1} V \\Lambda V^{-1} = V \\Lambda^2 V^{-1} \\\n",
+    "T &= V \\Lambda V^{-1} \\\\\n",
+    "T^2 &= V \\Lambda V^{-1} V \\Lambda V^{-1} = V \\Lambda^2 V^{-1} \\\\\n",
     "T^3 &= T(T^2) = V \\Lambda V^{-1} V \\Lambda^2 V^{-1} = V \\Lambda^3 V^{-1}\n",
     "\\end{align*}\n",
     "\n",
@@ -207,7 +258,11 @@
     "\n",
     "If we define $\\vv c = V^{-1}\\vv a$, then we recover $\\vv x(k) = c_1 \\lambda_1^k \\vv v_1 + \\cdots + c_n \\lambda_n^k \\vv v_n$.\n",
     "\n",
-    "**TO DO**: Please include Example 9.8."
+    ":::{prf:example} \n",
+    ":label: linear-iterative-ex2\n",
+    "\n",
+    "**TO DO**: Please include Example 9.8 and show how to obtain final solutions.\n",
+    ":::"
    ]
   },
   {
@@ -216,13 +271,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
