added example 9.7 into linear iterative systems

--- a/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
+++ b/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "::::\n",
     "\n",
-    ":::{prf:example} A $3\\times 3$ linear iterative system with complete coefficient matrix (ALA Example 9.7)\n",
+    ":::{prf:example} Solving a $3\\times 3$ linear iterative system (ALA Example 9.7)\n",
     ":label: linear-iterative-ex1\n",
     "\n",
     "Let $T = \\bm -3&1&6\\\\1&-1&-2\\\\-1&-1&0\\em$ be the coefficient matrix for a three-dimensional iterative system $\\vv{u}(k + 1) = T\\vv u(k)$. Its eigenvalues and corresponding eigenvectors are\n",
@@ -258,10 +258,34 @@
     "\n",
     "If we define $\\vv c = V^{-1}\\vv a$, then we recover $\\vv x(k) = c_1 \\lambda_1^k \\vv v_1 + \\cdots + c_n \\lambda_n^k \\vv v_n$.\n",
     "\n",
-    ":::{prf:example} \n",
+    ":::{prf:example} Solving a $2\\times 2$ linear iterative system with diagonalization\n",
     ":label: linear-iterative-ex2\n",
     "\n",
-    "**TO DO**: Please include Example 9.8 and show how to obtain final solutions.\n",
+    "Let $T = \\bm 7&6\\\\-9&-8\\em$. Its eigenvalues and eigenvectors are:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_1 = -2, \\quad \\vv{v_1} = \\bm -2\\\\3\\em, \\qquad \\lambda_2 = 1, \\quad \\vv{v_2} = \\bm -1\\\\1\\em.\n",
+    "$$\n",
+    "\n",
+    "We assemble these into the diagonal eigenvalue matrix $S$ and the eigenvector matrix $P$, given by\n",
+    "\n",
+    "$$\n",
+    "D = \\bm -2 &0\\\\0&1\\em, \\qquad P = \\bm -2&-1\\\\3&1\\em,\n",
+    "$$\n",
+    "\n",
+    "such that a [diagonalization](#diagonalizable-defn) of $T$ is given by $T = PDP^{-1}$. Therefore, using the results above, \n",
+    "\n",
+    "$$\n",
+    "T^k = PD^kP^{-1} &= \\bm -2&-1\\\\3&1\\em \\bm (-2)^k &0\\\\0&1 \\em \\bm 1&1\\\\-3&-2\\em\\\\\n",
+    "&= \\bm 3-2(-2)^k & 2 -2(-2)^k\\\\-3 + 3(-2)^k&-2 + 3(-2)^k \\em.\n",
+    "$$\n",
+    "\n",
+    "It follows that the solution to the particular iterative system with coefficient matrix $T$ and initial conditions $\\vv u(0)$ is given by\n",
+    "\n",
+    "$$\n",
+    "\\vv u(k) = T^k \\vv u(0) = \\bm 3-2(-2)^k & 2 -2(-2)^k\\\\-3 + 3(-2)^k&-2 + 3(-2)^k \\em\\vv u(0).\n",
+    "$$\n",
+    "\n",
     ":::"
    ]
   },
