--- a/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
+++ b/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subspaces Spanned by the Eigen Vectors\n",
+    "## Subspaces Spanned by the Eigenvectors\n",
     "\n",
     "Since we will focus on cases where $V=\\mathbb{R}^n$, our linear transformations will be defined by matrices $A:\\mathbb{R}^n \\to \\mathbb{R}^n$: $L(\\vv x)=A\\vv x$. In this case, we can characterize 1-d invariant subspaces very clearly.\n",
     "\n",
