--- a/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be ALAA 8.5.\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 8.5.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
@@ -357,6 +357,50 @@
     "We can use the same reasoning to find that\n",
     "\n",
     "\\[\\lambda_n = \\min \\{ q(y) \\mid \\|y\\| = 1 \\}. \\qquad (\\text{Min})\\]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, can we make a similar statement for a rank-1 symmetric matrix $k=vv^T\\in\\mathbb{R}^{n\\times n}$? Perhaps not surprisingly, using the spectral factorization provides an affirmative answer.\n",
+    "\n",
+    "In particular, let $k = Q\\Lambda Q^T$ be the spectral factorization of $k$. Then\n",
+    "\\[\n",
+    "q(x) = x^Tkx = x^TQ\\Lambda Q^Tx = y^T\\Lambda y, \\quad \\text{where } y = Q^Tx.\n",
+    "\\]\n",
+    "\n",
+    "According to our previous discussion, the maximum of $y^T\\Lambda y$ over all unit vectors $\\|y\\|=1$ is $\\lambda_1$, which is the same as the largest eigenvalue of $k$. Moreover, since $Q$ is an orthogonal matrix, it does not change the length of a vector when it acts on it:\n",
+    "\\[\n",
+    "1 = \\|y\\|^2 = y^Ty = x^TQQ^Tx = x^Tx = \\|x\\|^2 = 1\n",
+    "\\]\n",
+    "\n",
+    "So that the maximum of $q(x)$ over all $\\|x\\|=1$ is again $\\lambda_1$. Further, the vector $x$ achieving the maximum is $Qe_1 = v_1$, the corresponding (normalized) eigenvector of $k$. This is consistent with our prior geometric discussion: the direction of the maximal stretch is the vector aligned with the largest semi-axis of the ellipsoid defined by $q(x) = x^Tkx = c$, as in Fig. 4a above.\n",
+    "\n",
+    "We can apply the same reasoning to compute $\\lambda_n$. We summarize our discussion in the following theorem:\n",
+    "\n",
+    "\\begin{theorem}\n",
+    "Let $k$ be a symmetric matrix with real eigenvalues $\\lambda_1 \\geq \\lambda_2 \\geq \\cdots \\geq \\lambda_n$. Then\n",
+    "\\[\n",
+    "\\lambda_1 = \\max\\{x^Tkx \\mid \\|x\\|=1\\} \\quad \\text{and} \\quad \\lambda_n = \\min\\{x^Tkx \\mid \\|x\\|=1\\},\n",
+    "\\]\n",
+    "are respectively its largest and smallest eigenvalues. The maximal (minimal) value is achieved when $x$ is an eigenvector associated with the largest (smallest) eigenvalue $\\lambda_1$ (smallest eigenvalue $\\lambda_n$).\n",
+    "\\end{theorem}\n",
+    "\n",
+    "\\textbf{Example:} Maximize the quadratic form $q(x,y) = 3x^2 + 9xy + 3y^2$ over all $(x,y)$ satisfying $x^2+y^2=1$. The quadratic form is defined by the matrix $k = \\begin{bmatrix} 3 & \\frac{9}{2} \\\\ \\frac{9}{2} & 3 \\end{bmatrix}$, which has eigenvalues $\\lambda = 4$ and $\\lambda_2 = 2$. Therefore, the maximum is $\\lambda_1 = 4$, and is achieved at $\\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$.\n",
+    "\n",
+    "Finally, we note that the above theorem can be generalized to compute general eigenvalues by first eliminating the direction of the larger/smaller eigenvalues. For example, we can compute the second largest eigenvalue of $k$ by solving\n",
+    "\\[\n",
+    "\\lambda_2 = \\max\\{x^Tkx \\mid \\|x\\|=1, \\, x^Tv_1 = 0\\}.\n",
+    "\\]\n",
+    "\n",
+    "\n",
+    "The key constraint is $x^Tv_1=0$, which says we can only look for vectors that are orthogonal to $v_1$, the eigenvector associated with $\\lambda_1$.\n",
+    "\n",
+    "\\textbf{Example:} Find the maximum value of $q(x_1,x_2,x_3) = 9x_1^2 + 4x_2^2 + 3x_3^2$ subject to the constraint that $\\|x\\|=1$ and $x^Tv_1=0$, for $v_1=(1,0,0)$ the eigenvector corresponding to the greatest eigenvalue $\\lambda_1=9$ of $k=\\text{diag}(9,4,3)$. The constraint $x^Tv_1=0$ means $x_1=0$, and so we need to find $(x_2,x_3)$ satisfying $x_2^2+x_3^2=1$ that maximizes $4x_2^2+3x_3^2$. This happens at $(x_2,x_3)=(1,0)$, leading to a value of 4, which is the second largest eigenvalue $\\lambda_2$ of $k$. The corresponding eigenvector is $v_2=(0,1,0)$.\n",
+    "\n",
+    "\\textbf{Outline notes:} please add a less trivial example and then end with Thm 8.42 from ALA which has the general variational characterization of $\\lambda_i$.\n"
    ]
   }
  ],
