--- a/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 9.1 Eigenvalues of Symmetric Matrices\n",
     "subject:  Symmetric Matrices\n",
-    "subtitle: \n",
+    "subtitle: factorizing symmetric matrices\n",
     "short_title: 9.1 Eigenvalues of Symmetric Matrices\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -45,8 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- \n",
-    "- the Spectral theorem "
+    "- the properties of eigenvalues and eigenvectors of symmetric matrices\n",
+    "- the Spectral theorem\n",
+    "- the geometric interpretation of a linear transformation when the matrix is symmetric"
    ]
   },
   {
@@ -104,19 +105,21 @@
     "\\lambda_1 = 9, \\vv v_1 = \\begin{bmatrix} 1 \\\\ -1 \\\\ 0 \\end{bmatrix}, \\quad\n",
     "\\lambda_2 = 3, \\vv v_2 = \\begin{bmatrix} 1 \\\\ 1 \\\\ 1 \\end{bmatrix}, \\quad \\text{and} \\quad\n",
     "\\lambda_3 = -3, \\vv v_3 = \\begin{bmatrix} 1 \\\\ 1 \\\\ -2 \\end{bmatrix}.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
+    "\n",
     "You can check that these vectors are pairwise orthogonal: $\\vv v_i^T \\vv v_j = 0$ for $i \\neq j$, and hence form an orthogonal basis for $\\mathbb{R}^3$. An orthonormal basis is obtained by the corresponding unit norm eigenvectors:\n",
     "$$\n",
     "\\vv u_1 = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} -1 \\\\ 1 \\\\ 0 \\end{bmatrix}, \\quad\n",
     "\\vv u_2 = \\frac{1}{\\sqrt{3}} \\begin{bmatrix} 1 \\\\ 1 \\\\ 1 \\end{bmatrix}, \\quad \\text{and} \\quad\n",
     "\\vv u_3 = \\frac{1}{\\sqrt{6}} \\begin{bmatrix} 1 \\\\ 1 \\\\ -2 \\end{bmatrix}.\n",
     "$$\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## The Spectral Theorem\n",
     "\n",
@@ -169,13 +172,6 @@
     ":align: center\n",
     ":::\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/07_Ch_8_Iteration/092-Markov_Chains.ipynb)"
    ]
   },
   {
@@ -401,6 +397,13 @@
     "\\textbf{Example:} Find the maximum value of $q(x_1,x_2,x_3) = 9x_1^2 + 4x_2^2 + 3x_3^2$ subject to the constraint that $\\|x\\|=1$ and $x^Tv_1=0$, for $v_1=(1,0,0)$ the eigenvector corresponding to the greatest eigenvalue $\\lambda_1=9$ of $k=\\text{diag}(9,4,3)$. The constraint $x^Tv_1=0$ means $x_1=0$, and so we need to find $(x_2,x_3)$ satisfying $x_2^2+x_3^2=1$ that maximizes $4x_2^2+3x_3^2$. This happens at $(x_2,x_3)=(1,0)$, leading to a value of 4, which is the second largest eigenvalue $\\lambda_2$ of $k$. The corresponding eigenvector is $v_2=(0,1,0)$.\n",
     "\n",
     "\\textbf{Outline notes:} please add a less trivial example and then end with Thm 8.42 from ALA which has the general variational characterization of $\\lambda_i$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb)"
    ]
   }
  ],
